Fix blue outline on inbox buttons on iOs devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -859,6 +859,20 @@ li {
     outline: none;
 }
 
+/* Removes blue outline on iOs devices */
+/* CODE CREDIT: https://stackoverflow.com/a/66258857 */
+.switch__requests:focus,
+.switch__messages:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
+}
+
 .switch__requests {
     color: rgba(0, 0, 0, 0.3);
 }
